# pg2_test_rust

./: Cargo.toml  Makefile  README.md
.cargo/: config
gcw0/: default.gcw0.desktop  linker.sh
src/: emerald.rs  engine.rs  error.rs  event.rs  fps_counter.rs  main.rs  settings.rs  state.rs
